fix Pokedex contentWrap

--- a/src/pages/Pokedex/Pokedex.module.scss
+++ b/src/pages/Pokedex/Pokedex.module.scss
@@ -15,7 +15,6 @@
   padding: 0 20px;
   flex-grow: 1;
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
 }
 
